@@ -1,5 +1,9 @@
 * V1.10.3.1
-  * started new development version
+  * fixed ck.bat on Windows (if CK_ROOT has spaces)
+  * added possibility to add sub-directory for all entries of a given module based on first N characters of an entry name;
+    this is needed to handle millions of entries;
+    it can be configured via local kernel meta:
+    "split_dirs":{"module UOA":N} 
 
 * V1.10.3
   * fixed major bug with kernel version checking
